# tvide

./: .gitmodules  CLAUDE.md  CMakeLists.txt  INSTALL.md  ISSUES.md  LICENSE  README.md
libvterm/: CMakeLists.txt
src/: app.cpp  app.h  main.cpp
src/dialogs/: about.cpp  dialogs.h  findinfiles.cpp  findsymbol.cpp  gotoline.cpp  livesearch.cpp  openproject.cpp
src/editor/: editor.cpp  editor.h  editwindow.cpp  linenums.cpp  suggest.cpp
src/panels/: filetree.cpp  messages.cpp  panels.h  structure.cpp  terminal.cpp  winlist.cpp
src/project/: project.cpp  project.h
src/syntax/: clike.cpp  css.cpp  dockerfile.cpp  html.cpp  ini.cpp  javascript.cpp  json.cpp  lexer.cpp  lexer.h  makefile.cpp  markdown.cpp  php.cpp  plaintext.cpp  python.cpp  ruby.cpp  shell.cpp  sql.cpp  typescript.cpp  vue.cpp  xml.cpp  yaml.cpp
src/tvterm-core/: pty.cc
